--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ ul{
     text-indent: 20px;
     font-size: 17px;
     background: transparent;
-    color: white;
+    color: black;
     overflow: hidden;
 }
 .search-box button{
